# cortx

./: .gitignore  .npmignore  CONTRIBUTING.md  CORTEX.md  PUBLISH.md  README.md  cortex_agent.py  main.py  package-lock.json  package.json  pyproject.toml  tools.py  tools_rag.py  tsconfig.json
python/cortex_agent/: __init__.py  config.py  cortex_agent.py  llm.py  main.py  memory.py  policy.py  skills.py  terminal.py  tools.py  tools_browser.py  tools_computer.py  tools_mcp.py  tools_network.py  tools_rag.py
src/: config.ts
src/cli/: main.ts  terminal.ts
src/core/: llm.ts  loop.ts  memory_store.ts  policy.ts  registry.ts  types.ts
src/tools/: browser.ts  exec.ts  file.ts  git.ts  mcp.ts  memory.ts  net.ts  proxy.ts  subagent.ts
